@@ -21,6 +21,7 @@ Some changes are not backward compatible and may require code change in the proj
 ** Due to a security fix in latest jQuery, be sure you don't use self closing html elements in jQuery.append()/etc. (Example: <span/> -> <span></span>)
 ** echart uses new default colors, ensure to set colors in your projects and don't rely on default coloring
 ** Due to fontawesome/bootstrap/nouislider update, you need to rebuild your themes jar
+** Moved QuickEdit to package bcdui.widgetNg
 * Config
 ** In web.xml: add invalidRequest.blockSemicolon = false and check for other changes in Server/configFiles/web.xml
 ** Ensure to update dependency jars, see Docu/development/bcdui_dependencies.gradle
